src/microservices/onprem/app1-process/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-process-deployment
  labels:
    app: app1
    name: app1-process
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app1-process
  template:
    metadata:
      labels:
        name: app1-process
    spec:
      containers:
      - name: app1-process
        image: nuttaporn1449/app1-process:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 256Mi
            # cpu: 500m
